--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,6 @@
   grid-template-columns: 1fr;
 }
 .title{
-  font-family: SF Pro Rounded;
   font-style: normal;
   font-weight: 300;
   font-size: 24px;
@@ -35,7 +34,7 @@
   align-items: center;
 }
 .colorPickerParentBackground div:nth-child(1){
-  background-image: url("/images/first.svg");
+  background-image: url("/case/images/first.svg");
   width: 350px;
   height: 350px;
   position: absolute;
@@ -58,7 +57,6 @@
   font-family: 'SFRounded';
 }
 
-
 .buttonContainer{
   display: flex;
   justify-content: center;
@@ -79,7 +77,6 @@
   border-radius: 32px;
   border: 0px;
   padding: 1px 30px;
-  font-family: SF Pro Rounded;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -113,13 +110,13 @@
 
 .tableTitle1{
   margin-bottom: 15px;
-  background-image: url("/images/valueTitleText.svg");
+  background-image: url("/case/images/valueTitleText.svg");
   width: 100px;
   height: 16px;
 }
 .tableTitle2{
   margin-bottom: 15px;
-  background-image: url("/images/titleText.svg");
+  background-image: url("/case/images/titleText.svg");
   width: 101px;
   height: 16px;
 }
@@ -137,8 +134,8 @@
 
 @font-face {
   font-family: 'SFRounded';
-  src: url('/fonts/SFRounded-Light.woff2') format('woff2'),
-  url('/fonts/SFRounded-Light.woff') format('woff');
+  src: url('/case/fonts/SFRounded-Light.woff2') format('woff2'),
+  url('/case/fonts/SFRounded-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -146,8 +143,8 @@
 
 @font-face {
   font-family: 'SFRounded';
-  src: url('/fonts/SFRounded-Heavy.woff2') format('woff2'),
-  url('/fonts/SFRounded-Heavy.woff') format('woff');
+  src: url('/case/fonts/SFRounded-Heavy.woff2') format('woff2'),
+  url('/case/fonts/SFRounded-Heavy.woff') format('woff');
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -155,8 +152,8 @@
 
 @font-face {
   font-family: 'SFRounded';
-  src: url('/fonts/SFRounded-Semibold.woff2') format('woff2'),
-  url('/fonts/SFRounded-Semibold.woff') format('woff');
+  src: url('/case/fonts/SFRounded-Semibold.woff2') format('woff2'),
+  url('/case/fonts/SFRounded-Semibold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -164,8 +161,8 @@
 
 @font-face {
   font-family: 'SFRounded';
-  src: url('/fonts/SFRounded-Regular.woff2') format('woff2'),
-  url('/fonts/SFRounded-Regular.woff') format('woff');
+  src: url('/case/fonts/SFRounded-Regular.woff2') format('woff2'),
+  url('/case/fonts/SFRounded-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
