--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,9 +24,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 200px;
 }
 .colorPickerParentBackground{
-  width: 400px;
+  width: 100%;
   height: 350px;
   position: absolute;
   display: flex;
@@ -54,7 +55,7 @@
 }
 
 *{
-  font-family: 'SFRounded';
+  font-family: 'Nunito', sans-serif;
 }
 
 .buttonContainer{
@@ -108,17 +109,13 @@
   color: #303064;
 }
 
-.tableTitle1{
+.tableTitle{
   margin-bottom: 15px;
-  background-image: url("/case/images/valueTitleText.svg");
   width: 100px;
   height: 16px;
-}
-.tableTitle2{
-  margin-bottom: 15px;
-  background-image: url("/case/images/titleText.svg");
-  width: 101px;
-  height: 16px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #9cbcc9;
 }
 
 @media(max-width: 900px) {
@@ -133,36 +130,32 @@
 
 
 @font-face {
-  font-family: 'SFRounded';
-  src: url('/case/fonts/SFRounded-Light.woff2') format('woff2'),
-  url('/case/fonts/SFRounded-Light.woff') format('woff');
+  font-family: "Nunito";
+  src: url('/case/fonts/Nunito-Light.ttf');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'SFRounded';
-  src: url('/case/fonts/SFRounded-Heavy.woff2') format('woff2'),
-  url('/case/fonts/SFRounded-Heavy.woff') format('woff');
+  font-family: "Nunito";
+  src: url('/case/fonts/Nunito-Black.ttf');
   font-weight: 900;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'SFRounded';
-  src: url('/case/fonts/SFRounded-Semibold.woff2') format('woff2'),
-  url('/case/fonts/SFRounded-Semibold.woff') format('woff');
+  font-family: "Nunito";
+  src: url('/case/fonts/Nunito-SemiBold.ttf');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'SFRounded';
-  src: url('/case/fonts/SFRounded-Regular.woff2') format('woff2'),
-  url('/case/fonts/SFRounded-Regular.woff') format('woff');
+  font-family: "Nunito";
+  src: url('/case/fonts/Nunito-Regular.ttf');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
