--- a/styles/styles.css
+++ b/styles/styles.css
@@ -127,7 +127,14 @@
   }
 }
 
-
+main{
+    width: 100%;
+    height: 100vh;
+    display:grid;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+}
 
 @font-face {
   font-family: "Nunito";
